feat: test코드 실행 확인